---------------------------------------------------------------------------------------------------
Version: 20.2.2
Date: 2021-XX-XX
  Features:
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.2.1
Date: 2021-02-13
  Features:
    - Added mode: JD P00ber Split Factory
  Changes:
  Bugfixes:
  Info:
    - JD Plays logo is only seen when menu simulations are disabled since upgrade to Factorio.
---------------------------------------------------------------------------------------------------
Version: 20.2.0
Date: 2020-12-01
  Features:
    - Mod updated to Factorio 1.1 - all old modes removed as they are left in 0.18
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.1.2
Date: 2020-07-13
  Features:
    - Added mode: JD P00ber - August 2020
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.1.1
Date: 2020-04-01
  Features:
  Changes:
  Bugfixes:
    - March 2020 - add dummy steel axe to excluded items as it crashes the game
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.1.0
Date: 2020-03-30
  Features:
    - Mod updated to Factorio 0.18 - all old modes removed as they are left in 0.17
    - Added mode March 2020 - Egg surprise
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.20
Date: 2020-01-03
  Features:
  Changes:
  Bugfixes:
  Info:
    - January 2020: tweak tree list obtaining code to be more effecient and clearer to read
---------------------------------------------------------------------------------------------------
Version: 17.0.19
Date: 2020-01-03
  Features:
    - Add mode "January 2020"
  Changes:
  Bugfixes: