@@ -1,9 +1,29 @@
 # Factorio-JD-Plays
 
 
+
 A mod for streamer JD-Play's server. Includes a number of distinct modes.
-Note that older months code should work, but are untested retrospectively.
-All older months from 1.0 and earlier removed from mod as part of upgrade to 1.1
+
+
+General Notes
+==============
+
+All listed modes below "should" still just work, but only the top one was tested during most recent updates.
+All modes from before Factorio 1.1 have been removed from the active mod as part of upgrade to 1.1. The code is retained in a de-activated fashion, but would require updating and testing to re-enable.
+
+
+
+Easter Egg Suprise (2022)
+================
+
+When Biter Egg Nests are destroyed sometimes random items will be revealed as having been collected within the nest.
+- Expected Mods: Biter Eggs
+- When Biter Egg Nests are destroyed and the chance of neither it containing some number of biters or worms occurs, some random items will be revealed as being within the nest. Biter Eggs mod settings control the chance of an egg containing either biters or worms. But also contains settings that can then potentially spawn 0 of them in. This would lead to 0 items as the chance of biter/worms was met.
+- These random items will be 1 item per small egg nest and 1-3 items per large egg nest.
+- These items will just be simple vanilla items (with equal chance weight): iron plate, copper plate, steel plate, green circuits, gears, pipes, basic ammo, walls, gun turrets.
+- There won't be a repeat item within the same destroyed egg nest.
+
+
 
 JD P0ober Split Factory
 ==============
