@@ -1,1 +1,2 @@
 require("modes/jd-p0ober-split-factory/control")
+require("modes/easter-egg-suprise-2022/control")
