@@ -7,3 +7,4 @@ jdplays_mode=The mode used by the mod, see mod portal page for details of each m
 [string-mod-setting]
 jdplays_mode-none=None
 jdplays_mode-jd_p0ober_split_factory=JD P0ober Split Factory
+jdplays_mode-easter_egg_suprise_2022=Easter Egg Suprise 2022
