@@ -4,7 +4,7 @@ data:extend(
             name = "jdplays_mode",
             type = "string-setting",
             default_value = "none",
-            allowed_values = {"none", "jd_p0ober_split_factory"},
+            allowed_values = {"none", "jd_p0ober_split_factory", "easter_egg_suprise_2022"},
             setting_type = "startup",
             order = "1000"
         }
