@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 20.2.2
-Date: 2021-XX-XX
+Date: 2022-04-15
   Features:
+    - Added mode: Easter Egg Suprise (2022)
   Changes:
   Bugfixes:
   Info:
